# fast-app-k8

./: Dockerfile  README.md  pyproject.toml
kubernetes/: deployment.yaml  service.yaml
