[project]
name = "fast-app-k8"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Levy Marques Nunes", email = "levy.vix@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
